<resources>
    --Welcome layout--
    <string name="app_name">ISSA</string>
    <string name="welcome">Welcome to NewZealand! We are so thrilled that you have chosen
        Whitireia and WelTec as your new home while you study. \n\n
        \n\n
        This app will serve as a resource hub for information and support you may need while you are settling into studying with us.</string>

    <string name="school">Whitireia | WelTec</string>

    --Home layout--
    <string name="nav_header">Whitireia WelTec</string>
    <string name="fab">Add Task</string>
    <string name="function_button">Edit</string>
    --Login layout--
    <string name="edtUsername">Username</string>
    <string name="edtPassword">Password</string>
    <string name="btnLogin">Login</string>
    <string name="btnSkip">Skip</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Fragment</string>

    --Webpage--
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />


    --Add Activity layout--
    <string name="select">Select Support Functions</string>
    <string-array name="function_array">
        <item>Learning Support</item>
        <item>Social Activities</item>
        <item>Accommodation</item>
        <item>Transports</item>
        <item>Job Support</item>
    </string-array>
    <string name="support_title">Support title</string>
    <string name="description">Description</string>
    <string name="select_Function">Select Function </string>
    <string name="conclusion">Conclusion</string>
    <string name="save">Save </string>
    <string name="cancel">Cancel</string>

    --SupportFragment layout--
    <string name="supportCard">Description, links, emails</string>

    --UpdateWebpage layout--
    <string name="enterDepartment">Enter new Department</string>
    <string name="enterEmail">Enter Email</string>
    <string name="enterContact">Enter Contact Number</string>
    <string name="enterAddress">Enter Address</string>
    <string name="update">Update</string>
    <string name="editWbImage">edit the webpage banner</string>

    --SearchFragment layout--
    <string name="search">Search</string>

    --SupportContentFragment layout--
    <string name="bannerImage">Banner Image</string>
    <string name="introduction">Introduction</string>
    <string name="edit">Edit</string>

    <string name="click_here">Click Here</string>
    <string name="heading">Heading</string>
    <string name="details">Detail</string>

    <string name="content">Content</string>
    <string name="links">Web Links</string>

    <string name="email">Email</string>
    <string name="contact">Contact Number</string>

    <string name="created">+</string>
    <string name="removeId">-</string>

    <string name="function">Function Title</string>
    <string name="functionImage">Add function image</string>

    <string name="add">Add new support</string>
    <string name="addDetails">Add new details</string>
    <string name="remove">Remover</string>

    <string name="address">Address</string>
    <string name="enter_Section">Enter section title</string>




</resources>