<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/layout_support_content">

                <!-- Banner Image -->
                <ImageView
                    android:id="@+id/image_banner"
                    android:layout_width="match_parent"
                    android:layout_height="200sp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/logo"
                    android:contentDescription="@string/bannerImage" />

                <!-- Description -->
                <TextView
                    android:id="@+id/text_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8sp"
                    android:text="@string/introduction"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <!-- Sections -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_sections"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/item_display_section" />

                <!-- Conclusion -->
                <TextView
                    android:id="@+id/text_conclusion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/conclusion"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:padding="8sp" />

                <!-- Edit Button -->
                <Button
                    android:id="@+id/button_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="40sp"
                    android:text="@string/edit"
                    android:layout_marginTop="16sp"
                    android:layout_gravity="center"
                    android:textStyle="bold" />

        </LinearLayout>
</androidx.core.widget.NestedScrollView>
